tests/invalid/backend_include_chain_failure.wio
use @CppHeader("backend_include_chain_root.h");

fn Entry(args: string[]) -> i32 {
    return 0;
}
